# mToolkit

./: .gitignore  README.md  compile.sh  enter_docker.sh  enter_docker_dev.sh  install_env_ubuntu.sh
docker_platformer/: compile_cross_3rd.sh  compile_cross_audio_video.sh  compile_cross_google_series.sh  compile_cross_gun.sh  compile_cross_linux_tools.sh  cross.yaml
docker_platformer/docker_file/: Dockerfile
docker_platformer/patches/: grpc_h3_r258.patch  gst_buildroot.txt
linux_cross_env/: environment-setup.buildroot.sh
toolkit/: CMakeLists.txt
toolkit/cmake/check/: CheckCompiler.cmake  CheckInstallPrefix.cmake  CheckSystem.cmake
toolkit/cmake/traverse/: TraverseSource.cmake  TraverseSourceGroup.cmake
toolkit/source/: CMakeLists.txt  toolkit.h
toolkit/source/actor/: active.cpp  active.h  actor.h  event.cpp  event.h  handle.cpp  handle.h  hsm.cpp  hsm.h  queue.cpp  queue.h
toolkit/source/common/: common.h  include.h
toolkit/source/efficient/: annularcache.cpp  annularcache.h  efficient.h  instwlinklist.cpp  instwlinklist.h  queue.cpp  queue.h  stack.cpp  stack.h  twlinklist.cpp  twlinklist.h
toolkit/source/lock_container/: lock_container.h  lock_event.cpp  lock_event.h  lock_list.cpp  lock_list.h  lock_map.cpp  lock_map.h  lock_queue.cpp  lock_queue.h
toolkit/source/message_queue/: builder.cpp  builder.h  handler.h  looper.cpp  looper.h  message.cpp  message.h  message_dispatcher.h  message_queue.cpp  message_queue.h
toolkit/source/module/: module.h  plug_base.cpp  plug_base.h  plug_base_factory.cpp  plug_base_factory.h  singleton.cpp  singleton.h
toolkit/source/poll/: poll.h  thread_poll.cpp  thread_poll.h
toolkit/source/system/: process.cpp  process.h  system.h
toolkit/source/timer/: event.h  manager.cpp  manager.h  node.cpp  node.h  timer.h
toolkit/source/utilities/: filesystem.cpp  filesystem.h  math.cpp  math.h  net.cpp  net.h  serialize.cpp  serialize.h  string.cpp  string.h  timestamp.cpp  timestamp.h  utilities.h
toolkit/test/: CMakeLists.txt  main.cpp
toolkit/test/generic_plug/: plug_instance.h
toolkit_enckit/: CMakeLists.txt
toolkit_enckit/cmake/check/: CheckBuildType.cmake  CheckGlobalType.cmake  CheckPlatform.cmake
toolkit_enckit/cmake/traverse/: TraverseCMakeLists.cmake  TraverseInclude.cmake  TraverseInstall.cmake  TraverseLibrary.cmake  TraverseSet.cmake
toolkit_enckit/source/: CMakeLists.txt  toolkit_enckit.h
toolkit_enckit/source/dbus/: dbus_client.cpp  dbus_client.h  dbus_server.cpp  dbus_server.h
toolkit_enckit/source/grpc/: grpc_server.cpp  grpc_server.h  grpc_server_loop.h
toolkit_enckit/source/http_client/: http_client.cpp  http_client.h
toolkit_enckit/source/speaker_gst/: speaker_gst.cpp  speaker_gst.h
toolkit_enckit/source/speaker_pulseaudio/: speaker_pulseaudio.cpp  speaker_pulseaudio.h
toolkit_enckit/test/: CMakeLists.txt  main.cpp
