SET(PROGRAM_NAME mToolkit)
SET(PROGRAM_NAME_SHARE mToolkit)
SET(PROGRAM_NAME_STATIC mToolkit_static)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

RECURSE_CURRENT_DIRECTORY_SOURCE_FILE(SOURCE_FILES)


ADD_LIBRARY(${PROGRAM_NAME_SHARE} SHARED ${SOURCE_FILES})
ADD_LIBRARY(${PROGRAM_NAME_STATIC} STATIC ${SOURCE_FILES})

SET_TARGET_PROPERTIES(${PROGRAM_NAME_SHARE} PROPERTIES OUTPUT_NAME ${PROGRAM_NAME})
SET_TARGET_PROPERTIES(${PROGRAM_NAME_STATIC} PROPERTIES OUTPUT_NAME ${PROGRAM_NAME})

SET_TARGET_PROPERTIES(${PROGRAM_NAME_SHARE} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${PROGRAM_NAME_STATIC} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${PROGRAM_NAME_SHARE} ${PROGRAM_NAME_STATIC}
                        LIBRARY DESTINATION ${LIBRARY_INSTALL_PREFIX}
                        ARCHIVE DESTINATION ${LIBRARY_INSTALL_PREFIX})

TRAVERSE_INSTALL_INCLUDE(poll ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/poll)
TRAVERSE_INSTALL_INCLUDE(debug ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/debug)
TRAVERSE_INSTALL_INCLUDE(timer ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/timer)
TRAVERSE_INSTALL_INCLUDE(actor ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/actor)
TRAVERSE_INSTALL_INCLUDE(module ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/module)
TRAVERSE_INSTALL_INCLUDE(system ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/system)
TRAVERSE_INSTALL_INCLUDE(common ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/common)
TRAVERSE_INSTALL_INCLUDE(efficient ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/efficient)
TRAVERSE_INSTALL_INCLUDE(utilities ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/utilities)
TRAVERSE_INSTALL_INCLUDE(message_queue ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/message_queue)
TRAVERSE_INSTALL_INCLUDE(lock_container ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/lock_container)
TRAVERSE_INSTALL_INCLUDE(${CMAKE_CURRENT_LIST_DIR} ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME})
