SET(PROGRAM_NAME mToolkit_enckit)
SET(PROGRAM_NAME_SHARE mToolkit_enckit)
SET(PROGRAM_NAME_STATIC mToolkit_enckit_static)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

RECURSE_CURRENT_DIRECTORY_SOURCE_FILE(SOURCE_FILES)

ADD_LIBRARY(${PROGRAM_NAME_SHARE} SHARED ${SOURCE_FILES})
ADD_LIBRARY(${PROGRAM_NAME_STATIC} STATIC ${SOURCE_FILES})


INCLUDE_DIRECTORIES(AFTER SYSTEM /usr/include/glib-2.0)
INCLUDE_DIRECTORIES(AFTER SYSTEM /usr/include/gstreamer-1.0)
INCLUDE_DIRECTORIES(AFTER SYSTEM /usr/lib/x86_64-linux-gnu/glib-2.0/include/)

TARGET_LINK_LIBRARIES(${PROGRAM_NAME_SHARE} PUBLIC fmt mToolkit glog pulse sndfile glib-2.0 gstreamer-1.0 curl sdbus-c++ grpc++ grpc++_reflection protobuf)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME_STATIC} PUBLIC fmt mToolkit glog pulse sndfile glib-2.0 gstreamer-1.0 curl sdbus-c++ grpc++ grpc++_reflection protobuf)

SET_TARGET_PROPERTIES(${PROGRAM_NAME_SHARE} PROPERTIES OUTPUT_NAME ${PROGRAM_NAME})
SET_TARGET_PROPERTIES(${PROGRAM_NAME_STATIC} PROPERTIES OUTPUT_NAME ${PROGRAM_NAME})

SET_TARGET_PROPERTIES(${PROGRAM_NAME_SHARE} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${PROGRAM_NAME_STATIC} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${PROGRAM_NAME_SHARE} ${PROGRAM_NAME_STATIC}
	LIBRARY DESTINATION ${LIBRARY_INSTALL_PREFIX}
	ARCHIVE DESTINATION ${LIBRARY_INSTALL_PREFIX})

TRAVERSE_INSTALL_INCLUDE(dbus ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/dbus)
TRAVERSE_INSTALL_INCLUDE(grpc ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/grpc)
TRAVERSE_INSTALL_INCLUDE(http_client ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/http_client)
TRAVERSE_INSTALL_INCLUDE(speaker_gst ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/speaker_gst)
TRAVERSE_INSTALL_INCLUDE(speaker_pulseaudio ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME}/speaker_pulseaudio)
TRAVERSE_INSTALL_INCLUDE(${CMAKE_CURRENT_LIST_DIR} ${INCLUDE_INSTALL_PREFIX}/${PROGRAM_NAME})
